--- a/_config.yml
+++ b/_config.yml
@@ -99,3 +99,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: 'git'
+  repo: git@github.com:altjz/altjz.github.io.git
+  branch: master
